[tool.poetry]
name = "slack-interactive-lambda"
version = "0.1.0"
description = "Interactivity with Slack Commands in AWSLambda"
authors = ["Daisuke Araki <daisukeArk@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
slack-sdk = "^3.21.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.1"
boto3 = "^1.26.125"
botocore = "^1.29.125"
pytest-mock = "^3.10.0"

[tool.black]
target-version = ['py39']
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
